@@ -1,3 +1,8 @@
+2005-12-02  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool-callbacks.c: (save_results_cb):  Make this
+	function more robust, i.e. handle rows being removed.
+
 2005-12-02  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* gsearchtool-callbacks.c: (file_changed_cb), (move_to_trash_cb):
